Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -291,10 +291,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 %\input{./chapters/ee18btech11001.tex}
 %\end{enumerate}
 \section{Stability}
-\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
-\numberwithin{equation}{enumi}
+\subsection{Second order System}
 \input{./chapters/ee18btech11002.tex}
-\end{enumerate}
 \section{Routh Hurwitz Criterion}
 
 \section{Compensators}
