--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -16,7 +16,7 @@
 %\restoresymbol{TXF}{iint}
 %\usepackage{wasysym}
 \usepackage{amsthm}
-\usepackage{iithtlc}
+%\usepackage{iithtlc}
 \usepackage{mathrsfs}
 \usepackage{txfonts}
 \usepackage{stfloats}
@@ -161,9 +161,9 @@ columns=fullflexible
 \vspace{3cm}
 
 \title{
-	\logo{
+%	\logo{
 Control Systems
-	}
+%	}
 }
 \author{ G V V Sharma$^{*}$% <-this % stops a space
 	\thanks{*The author is with the Department
@@ -298,35 +298,6 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Compensators}
 \section{Nyquist Plot}
 
-%\section{Triangle}
-%\subsection{Triangle Examples}
-%\input{./triangle/tri_exam.tex} 
-%\subsection{Triangle Exercises}
-%\input{./triangle/tri_geo.tex} 
-%%
-%\section{Quadrilateral}
-%\subsection{Quadrilateral Examples}
-%\input{./quad/quad_geo_exam.tex} 
-%\subsection{Quadrilateral Geometry}
-%\input{./quad/quad_geo.tex} 
-%
-%\section{Constrained Optimization}
-%%\subsection{Equality Constraint}
-%\input{./chapters/line_exam.tex}
-%\section{Convex Function}
-%\input{./chapters/conv.tex}
-%\section{Gradient Descent}
-%\input{./chapters/grad_des.tex}
-%\section{Lagrange Multipliers}
-%\input{./chapters/lagrange.tex}
-%\section{Quadratic Programming}
-%\input{./chapters/qp.tex}
-%\section{Semi Definite Programming}
-%\input{./chapters/sdp.tex}
-%\section{Linear Programming}
-%\input{./chapters/lp_exam.tex}
-%\section{Exercises}
-%\input{./chapters/lp_exer.tex}
 
 
 \end{document}
