Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -295,6 +295,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11002.tex}
 \section{Routh Hurwitz Criterion}
 \input{./chapters/ee18btech11005.tex}
+\section{State-Space Model}
+\input{./chapters/ee18btech11004.tex}
 
 \section{Compensators}
 \section{Nyquist Plot}
