Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -300,6 +300,7 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 
 \section{Compensators}
 \section{Nyquist Plot}
+\input{./chapters/ee18btech11007.tex}
 
 
 
