Add existing files

--- a/manual/manual/tables/ee18btech11007.tex
+++ b/manual/manual/tables/ee18btech11007.tex
@@ -92,8 +92,15 @@ Z=P+N
  
  \hline
 \end{tabular}
-\\ 
-\newline from plot we get N=0,and we already know P=0 since our G(s) doesnt have any poles on right half of s-plane
+\\
+\newline NOTE-
+\begin{itemize}
+\item If a clockwise contour does not encircle zeros nor poles, then the plot will not encircle the origin.
+\item If a clockwise contour encircles a zero, then the plot will encircle the origin clockwise once.
+\item If a clockwise contour encircles a pole, then the plot will encircle the origin counterclockwise once.
+\end{itemize}
+\\
+\newline from plot we get N=0 because there are no encirclements about -1+0j,and we already know P=0 since our G(s) doesnt have any poles on right half of s-plane
 \begin{align}
 Z=0+0=0
 \end{align}
