Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -294,14 +294,17 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Second order System}
 \input{./chapters/ee18btech11002.tex}
 \section{Routh Hurwitz Criterion}
+\subsection{Marginal Stability}
 \input{./chapters/ee18btech11005.tex}
+\subsection{Stability}
+\input{./chapters/ee18btech11008.tex}
 \section{State-Space Model}
 \input{./chapters/ee18btech11004.tex}
 
-\section{Compensators}
 \section{Nyquist Plot}
 \input{./chapters/ee18btech11007.tex}
 
+\section{Compensators}
 
 
 \end{document}
