Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -299,7 +299,10 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Stability}
 \input{./chapters/ee18btech11008.tex}
 \section{State-Space Model}
+\subsection{Controllability and Observabiity}
 \input{./chapters/ee18btech11004.tex}
+\subsection{Second Order System}
+\input{./chapters/ee18btech11011.tex}
 
 \section{Nyquist Plot}
 \input{./chapters/ee18btech11007.tex}
