Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -308,6 +308,7 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11007.tex}
 
 \section{Compensators}
+\input{./chapters/ee18btech11010.tex}
 
 
 \end{document}
