Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -285,11 +285,11 @@ Download python codes using
 svn co https://github.com/gadepall/school/trunk/control/codes
 \end{lstlisting}
 
-%\section{Bode Plot}
-%\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
-%\numberwithin{equation}{enumi}
-%\input{./chapters/ee18btech11001.tex}
-%\end{enumerate}
+\section{Bode Plot}
+\subsection{Introduction}
+\input{./chapters/ee18btech11001.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11009.tex}
 \section{Stability}
 \subsection{Second order System}
 \input{./chapters/ee18btech11002.tex}
