Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -293,6 +293,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Stability}
 \subsection{Second order System}
 \input{./chapters/ee18btech11002.tex}
+\subsection{Damping}
+\input{./chapters/ee18btech11012.tex}
 \section{Routh Hurwitz Criterion}
 \subsection{Marginal Stability}
 \input{./chapters/ee18btech11005.tex}
