--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -285,6 +285,8 @@ Download python codes using
 svn co https://github.com/gadepall/school/trunk/control/codes
 \end{lstlisting}
 
+\section{Mason's Gain Formula}
+\input{./chapters/ee18btech11003.tex}
 \section{Bode Plot}
 \subsection{Introduction}
 \input{./chapters/ee18btech11001.tex}
@@ -294,7 +296,7 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Second order System}
 \input{./chapters/ee18btech11002.tex}
 \subsection{Damping}
-\input{./chapters/ee18btech11012.tex}
+%\input{./chapters/ee18btech11012.tex}
 \section{Routh Hurwitz Criterion}
 \subsection{Marginal Stability}
 \input{./chapters/ee18btech11005.tex}
