Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -292,11 +292,11 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11001.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11009.tex}
-\section{Stability}
-\subsection{Second order System}
-\input{./chapters/ee18btech11002.tex}
+\section{Second order System}
 \subsection{Damping}
-%\input{./chapters/ee18btech11012.tex}
+\input{./chapters/ee18btech11012.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11002.tex}
 \section{Routh Hurwitz Criterion}
 \subsection{Marginal Stability}
 \input{./chapters/ee18btech11005.tex}
