Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -298,6 +298,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Example}
 \input{./chapters/ee18btech11002.tex}
 \section{Routh Hurwitz Criterion}
+\subsection{Routh Array}
+\input{./chapters/ee18btech11014.tex}
 \subsection{Marginal Stability}
 \input{./chapters/ee18btech11005.tex}
 \subsection{Stability}
