--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -306,7 +306,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11008.tex}
 \section{State-Space Model}
 \subsection{Controllability and Observabiity}
-\input{./chapters/ee18btech11004.tex}
+%\input{./chapters/ee18btech11004.tex}
+\input{./chapters/ee18btech11006.tex}
 \subsection{Second Order System}
 \input{./chapters/ee18btech11011.tex}
 
