Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -316,6 +316,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 
 \section{Compensators}
 \input{./chapters/ee18btech11010.tex}
+\section{Phase Margin}
+\input{./chapters/ee18btech11017.tex}
 
 
 \end{document}
