Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -39,6 +39,8 @@
 %\usepackage{stmaryrd}
 \usepackage{tkz-euclide} % loads  TikZ and tkz-base
 \usetkzobj{all}
+\usetikzlibrary{decorations.markings}
+\newif\iflabrev
 \usepackage{listings}
     \usepackage{color}                                            %%
     \usepackage{array}                                            %%
