Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -320,6 +320,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11010.tex}
 \section{Phase Margin}
 \input{./chapters/ee18btech11017.tex}
+\section{Gain Margin}
+\input{./chapters/ee18btech11016.tex}
 
 
 \end{document}
