Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -316,12 +316,14 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Nyquist Plot}
 \input{./chapters/ee18btech11007.tex}
 
-\section{Compensators}
-\input{./chapters/ee18btech11010.tex}
 \section{Phase Margin}
 \input{./chapters/ee18btech11017.tex}
 \section{Gain Margin}
 \input{./chapters/ee18btech11016.tex}
+\section{Compensators}
+\subsection{Phase Lead}
+%\input{./chapters/ee18btech11010.tex}
+\input{./chapters/ee18btech11021.tex}
 
 
 \end{document}
