Add existing files

--- a/manual/tables/ee18btech11012_damp_bkup.tex
+++ b/manual/tables/ee18btech11012_damp_bkup.tex
@@ -194,11 +194,11 @@
 
 \hhline{|-|-|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{H(s)}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$H(s)$}}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{$\omega$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$\omega$}}}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{$\zeta$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$\zeta$}}}
 	&\multicolumn{1}{p{\gnumericColD}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{Damping Type}}}
 \\
@@ -208,7 +208,7 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{$\sqrt{35}$}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{$\sqrt{\frac{81}{35}}> 1$}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{$\sqrt{\frac{81}{35}}> 1$}}
 	&\multicolumn{1}{p{\gnumericColD}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{Overdamped}}
 \\
@@ -218,17 +218,17 @@
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{$5$}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{$1$}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{$1$}}
 	&\multicolumn{1}{p{\gnumericColD}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{Critically Damped}}
 \\
 \hhline{|----|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{$\frac{15}{{s^2+5s+15}}$}
+	{$\frac{15}{{s^2+5s+15}}$ }
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{$\sqrt{15}$}
 	&\multicolumn{1}{p{\gnumericColC}|}%
-	{\gnumericPB{\centering}\gnumbox{$\sqrt{\frac{5}{12}}< 1$}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{$\sqrt{\frac{5}{12}}< 1$}}
 	&\multicolumn{1}{p{\gnumericColD}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{Underdamped}}
 \\
