--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -311,8 +311,11 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Controllability and Observabiity}
 %\input{./chapters/ee18btech11004.tex}
 \input{./chapters/ee18btech11006.tex}
+
 \subsection{Second Order System}
 \input{./chapters/ee18btech11011.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11023.tex}
 
 \section{Nyquist Plot}
 \input{./chapters/ee18btech11007.tex}
