Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -307,8 +307,10 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11005.tex}
 \subsection{Stability}
 \input{./chapters/ee18btech11008.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11020.tex}
 \section{State-Space Model}
-\subsection{Controllability and Observabiity}
+\subsection{Controllability and Observability}
 %\input{./chapters/ee18btech11004.tex}
 \input{./chapters/ee18btech11006.tex}
 
