Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -288,8 +288,11 @@ Download python codes using
 svn co https://github.com/gadepall/school/trunk/control/codes
 \end{lstlisting}
 
-\section{Mason's Gain Formula}
+\section{Signal Flow Graph}
+\subsection{Mason's Gain Formula}
 \input{./chapters/ee18btech11003.tex}
+\subsection{Matrix Formula}
+\input{./chapters/ee18btech11007_1.tex}
 \section{Bode Plot}
 \subsection{Introduction}
 \input{./chapters/ee18btech11001.tex}
