--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -329,6 +329,9 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Phase Lead}
 %\input{./chapters/ee18btech11010.tex}
 \input{./chapters/ee18btech11021.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11027.tex}
+
 \section{Gain Margin}
 \input{./chapters/ee18btech11016.tex}
 \section{Phase Margin}
