Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -321,6 +321,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11011.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11023.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11026.tex}
 
 \section{Nyquist Plot}
 \input{./chapters/ee18btech11007.tex}
@@ -330,10 +332,13 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 %\input{./chapters/ee18btech11010.tex}
 \input{./chapters/ee18btech11021.tex}
 \subsection{Example}
-\input{./chapters/ee18btech11027.tex}
+%\input{./chapters/ee18btech11027.tex}
 
 \section{Gain Margin}
+\subsection{Introduction}
 \input{./chapters/ee18btech11016.tex}
+\subsection{Example}
+%\input{./chapters/ee18btech11025.tex}
 \section{Phase Margin}
 \input{./chapters/ee18btech11017.tex}
 \section{Oscillator}
