--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -338,7 +338,7 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Introduction}
 \input{./chapters/ee18btech11016.tex}
 \subsection{Example}
-%\input{./chapters/ee18btech11025.tex}
+\input{./chapters/ee18btech11025.tex}
 \section{Phase Margin}
 \input{./chapters/ee18btech11017.tex}
 \section{Oscillator}
