Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -344,6 +344,9 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Phase Margin}
 \input{./chapters/ee18btech11017.tex}
 \section{Oscillator}
+\subsection{Introduction}
+\input{./chapters/ee18btech11030.tex}
+\subsection{Example}
 \input{./chapters/ee18btech11019.tex}
 
 
