Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -314,17 +314,19 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11008.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11020.tex}
+%
 \section{State-Space Model}
 \subsection{Controllability and Observability}
 %\input{./chapters/ee18btech11004.tex}
 \input{./chapters/ee18btech11006.tex}
-
 \subsection{Second Order System}
 \input{./chapters/ee18btech11011.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11023.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11026.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11031.tex}
 
 \section{Nyquist Plot}
 \input{./chapters/ee18btech11007.tex}
