Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -288,54 +288,60 @@ Download python codes using
 svn co https://github.com/gadepall/school/trunk/control/codes
 \end{lstlisting}
 
-\section{Signal Flow Graph}
-\subsection{Mason's Gain Formula}
-\input{./chapters/ee18btech11003.tex}
-\subsection{Matrix Formula}
-\input{./chapters/ee18btech11007_1.tex}
-\section{Bode Plot}
+
+\section{Polar Plot}
 \subsection{Introduction}
-\input{./chapters/ee18btech11001.tex}
 \subsection{Example}
-\input{./chapters/ee18btech11009.tex}
-\section{Second order System}
-\subsection{Damping}
-\input{./chapters/ee18btech11012.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11002.tex}
-\section{Routh Hurwitz Criterion}
-\subsection{Routh Array}
-\input{./chapters/ee18btech11014.tex}
-\subsection{Marginal Stability}
-\input{./chapters/ee18btech11005.tex}
-\subsection{Stability}
-\input{./chapters/ee18btech11008.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11020.tex}
-\section{State-Space Model}
-\subsection{Controllability and Observability}
-%\input{./chapters/ee18btech11004.tex}
-\input{./chapters/ee18btech11006.tex}
+%\input{./chapters/ee18btech11029.tex}
 
-\subsection{Second Order System}
-\input{./chapters/ee18btech11011.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11023.tex}
-
-\section{Nyquist Plot}
-\input{./chapters/ee18btech11007.tex}
-
-\section{Compensators}
-\subsection{Phase Lead}
-%\input{./chapters/ee18btech11010.tex}
-\input{./chapters/ee18btech11021.tex}
-\section{Gain Margin}
-\input{./chapters/ee18btech11016.tex}
-\section{Phase Margin}
-\input{./chapters/ee18btech11017.tex}
-\section{Oscillator}
-\input{./chapters/ee18btech11019.tex}
-
+%\section{Signal Flow Graph}
+%\subsection{Mason's Gain Formula}
+%\input{./chapters/ee18btech11003.tex}
+%\subsection{Matrix Formula}
+%\input{./chapters/ee18btech11007_1.tex}
+%\section{Bode Plot}
+%\subsection{Introduction}
+%\input{./chapters/ee18btech11001.tex}
+%\subsection{Example}
+%\input{./chapters/ee18btech11009.tex}
+%\section{Second order System}
+%\subsection{Damping}
+%\input{./chapters/ee18btech11012.tex}
+%\subsection{Example}
+%\input{./chapters/ee18btech11002.tex}
+%\section{Routh Hurwitz Criterion}
+%\subsection{Routh Array}
+%\input{./chapters/ee18btech11014.tex}
+%\subsection{Marginal Stability}
+%\input{./chapters/ee18btech11005.tex}
+%\subsection{Stability}
+%\input{./chapters/ee18btech11008.tex}
+%\subsection{Example}
+%\input{./chapters/ee18btech11020.tex}
+%\section{State-Space Model}
+%\subsection{Controllability and Observability}
+%%\input{./chapters/ee18btech11004.tex}
+%\input{./chapters/ee18btech11006.tex}
+%
+%\subsection{Second Order System}
+%\input{./chapters/ee18btech11011.tex}
+%\subsection{Example}
+%\input{./chapters/ee18btech11023.tex}
+%
+%\section{Nyquist Plot}
+%\input{./chapters/ee18btech11007.tex}
+%
+%\section{Compensators}
+%\subsection{Phase Lead}
+%%\input{./chapters/ee18btech11010.tex}
+%\input{./chapters/ee18btech11021.tex}
+%\section{Gain Margin}
+%\input{./chapters/ee18btech11016.tex}
+%\section{Phase Margin}
+%\input{./chapters/ee18btech11017.tex}
+%\section{Oscillator}
+%\input{./chapters/ee18btech11019.tex}
+%
 
 
 \end{document}
