Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -329,7 +329,10 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11031.tex}
 
 \section{Nyquist Plot}
+\subsection{Introduction}
 \input{./chapters/ee18btech11007.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11034.tex}
 
 \section{Compensators}
 \subsection{Phase Lead}
