Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -305,6 +305,9 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11012.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11002.tex}
+\subsection{Settling Time}
+\input{./chapters/ee18btech11035.tex}
+%
 \section{Routh Hurwitz Criterion}
 \subsection{Routh Array}
 \input{./chapters/ee18btech11014.tex}
