--- a/manual/figs/ee18btech11019/lc.tex
+++ b/manual/figs/ee18btech11019/lc.tex
@@ -1,10 +1,23 @@
-\begin{circuitikz} 
+\tikzset{
+ifnode/.style={rectangle,dashed,draw=black, top color=white, inner sep=1em,minimum width=16cm, minimum height=5cm, text centered, fill=yellow}
+}
+\begin{circuitikz} [scale=2]
+\node[ifnode, label=above:  Amplifier $G(s)$] (ifin) at (-2.7,0) {};
+\node[ifnode, label=below:  Feedback $H(s)$] (ifin2) at (-2.8,-2.8) {};
+\draw 
+(0,0) node[op amp] (opamp) [scale=2] {}
+(opamp.-) -- (-3,0.5) to [R=$R_1$,i<_=$i$] (-5,0.5) -- (-6,0.5) to [short, i<_=$i$]  (-6,-2) to [L=$L_2$,i<_=$i_1$] (-4,-2)
+-- (-1,-2) to[L=$L_1$,i<_=$i_1$] (1,-2) to[short, i<_=$i$] (1,0) {};
+\node[draw,box] (A) at (1.5,-0.7) {$V_{out}$};
+\node[draw,box] (B) at (-6.5,-3) {$V_{f}$};
+\draw (-6,-2) -- (-6,-3)  to [C=$C$,i<_=$i_2$] (1,-3) -- (1,-2) 
 
-\draw
-(0,0) -- (4,0) node[label = $V_{out}$]
-  to [european resistor = $Z_2$]  (4,-4)   -- (0,-4)node[ground] {} to[european resistor = $Z_1$] (0,-2) 
-  to[european resistor = $Z_3$] (0,0) to[american resistor,label=$R_o$] (-4,0) to[american voltage source ,label= -$A_vV_{in}$](-4,-1) node[ground] {}
-  (0,-2)--(-6,-2)--(-6,0) node[label = $V_f$];
-  
+(opamp.-) to[short,*-,label=$V_1$] ++(0,1) coordinate (leftC)
+to[R=$R_2$,i=$i$] (leftC -| opamp.out)
+to[short,-*] (opamp.out) to [short,-o] (1.5,0) to (1.5,-0.5) {}
+(opamp.+) to[short,label=$V_2$] (-3,-0.5) -- (-5,-0.5) node[ground] [scale=2] {};
+\draw (-2,-0.5) -- (-2,-2);
+\draw (-6,-3) -- (-6.3,-3);
 
-\end{circuitikz} 
+
+\end{circuitikz}
