--- a/manual/figs/ee18btech11019/osc.tex
+++ b/manual/figs/ee18btech11019/osc.tex
@@ -16,12 +16,12 @@
 \begin{tikzpicture}[node distance=2.5cm,auto,>=latex']
   \node [input, name=input] {};
   \node [sum, right of=input] (sum) {};
-  \node [amp, right of = sum] (block1) {$A$};
+  \node [amp, right of = sum] (block1) {$G$};
   \node [output, right of= block1] (output) {};
-  \node [block, below of = block1] (block2) {$B$};
+  \node [block, below of = block1] (block2) {$H$};
   \draw [->] (input) -- node {$V_{in}$} (sum);
-  \draw [->] (sum) -- node {$V_{in} + BV_{out}$} (block1);
+  \draw [->] (sum) -- node {$V_{in} + HV_{out}$} (block1);
   \draw [->] (block1) -- node [name =y] {$V_{out}$} (output);
   \draw [->] (y) |- node [above,pos=0.79] {$V_{out}$} (block2) ;
-  \draw [->] (block2) -| node  {$BV_{out}$} (sum) ;
+  \draw [->] (block2) -| node  {$HV_{out}$} (sum) ;
 \end{tikzpicture}
