Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -349,6 +349,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11016.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11025.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11038.tex}
 \section{Phase Margin}
 \input{./chapters/ee18btech11017.tex}
 \section{Oscillator}
