--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -294,6 +294,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 %\input{./chapters/ee18btech11021.tex}
 \section{Polar Plot}
 \subsection{Introduction}
+\input{./chapters/ee18btech11029.tex}
+\subsection{Example}
 \input{./chapters/ee18btech11023.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11012.tex}
