Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -291,7 +291,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 
 \section{PID Controller}
 \subsection{Introduction}
-%\input{./chapters/ee18btech11021.tex}
+\input{./chapters/ee18btech11021.tex}
 \section{Polar Plot}
 \subsection{Introduction}
 \input{./chapters/ee18btech11029.tex}
