Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -317,6 +317,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11008.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11020.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11039.tex}
 %
 \section{State-Space Model}
 \subsection{Controllability and Observability}
