Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -354,7 +354,10 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \subsection{Example}
 \input{./chapters/ee18btech11038.tex}
 \section{Phase Margin}
+\subsection{Intoduction}
 \input{./chapters/ee18btech11017.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11036.tex}
 \section{Oscillator}
 \subsection{Introduction}
 \input{./chapters/ee18btech11030.tex}
