Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -300,6 +300,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11001.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11009.tex}
+\subsection{Phase}
+\input{./chapters/ee18btech11037.tex}
 \section{Second order System}
 \subsection{Damping}
 \input{./chapters/ee18btech11012.tex}
