Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -343,10 +343,11 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 
 \section{Compensators}
 \subsection{Phase Lead}
+\label{sec:ee18btech11021}
 %\input{./chapters/ee18btech11010.tex}
 \input{./chapters/ee18btech11021.tex}
 \subsection{Example}
-%\input{./chapters/ee18btech11027.tex}
+\input{./chapters/ee18btech11027.tex}
 
 \section{Gain Margin}
 \subsection{Introduction}
