Add existing fils

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -300,6 +300,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{Example}
 \input{./chapters/ee18btech11012.tex}
 \subsection{Example}
+\input{./chapters/ee18btech11033.tex}
+\subsection{Example}
 \input{./chapters/ee18btech11002.tex}
 
 %\input{./chapters/ee18btech11029.tex}
