Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -324,7 +324,6 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 %
 \section{State-Space Model}
 \subsection{Controllability and Observability}
-%\input{./chapters/ee18btech11004.tex}
 \input{./chapters/ee18btech11006.tex}
 \subsection{Second Order System}
 \input{./chapters/ee18btech11011.tex}
@@ -334,6 +333,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11026.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11031.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11047.tex}
 
 \section{Nyquist Plot}
 \subsection{Introduction}
