Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -335,6 +335,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11031.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11047.tex}
+%\subsection{Example}
+%\input{./chapters/ee18btech11040.tex}
 
 \section{Nyquist Plot}
 \subsection{Introduction}
@@ -367,6 +369,10 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11030.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11019.tex}
+%
+\section{Root Locus}
+\subsection{Introduction}
+\input{./chapters/ee18btech11046.tex}
 
 
 
