Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -347,8 +347,11 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Compensators}
 \subsection{Phase Lead}
 \label{sec:ee18btech11021}
-%\input{./chapters/ee18btech11010.tex}
 \input{./chapters/ee18btech11021.tex}
+\subsection{Lag Lead}
+%\label{sec:ee18btech11044}
+%\input{./chapters/ee18btech11010.tex}
+\input{./chapters/ee18btech11044.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11027.tex}
 
