Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -335,8 +335,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11031.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11047.tex}
-%\subsection{Example}
-%\input{./chapters/ee18btech11040.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11040.tex}
 
 \section{Nyquist Plot}
 \subsection{Introduction}
