Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -293,6 +293,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11003.tex}
 \subsection{Matrix Formula}
 \input{./chapters/ee18btech11007_1.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11041.tex}
 %\subsection{Example}
 %\input{./chapters/ee18btech11029.tex}
 \section{Bode Plot}
