Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -294,7 +294,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11021.tex}
 \section{Polar Plot}
 \subsection{Introduction}
-\input{./chapters/ee18btech11029.tex}
+\input{./chapters/ee18btech11028.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11023.tex}
 \subsection{Example}
@@ -303,6 +303,10 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11033.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11002.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11042.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11029.tex}
 
 %\input{./chapters/ee18btech11029.tex}
 
