--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -379,6 +379,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Root Locus}
 \subsection{Introduction}
 \input{./chapters/ee18btech11046.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11050.tex}
 
 
 
