--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -308,6 +308,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Second order System}
 \subsection{Damping}
 \input{./chapters/ee18btech11012.tex}
+\subsection{Peak Overshoot}
+\input{./chapters/ee18btech11045.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11002.tex}
 \subsection{Settling Time}
