--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -383,7 +383,10 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11046.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11050.tex}
-
+%
+\section{Polar Plot}
+\subsection{Introduction}
+\input{./chapters/ee18btech11051.tex}
 
 
 \end{document}
