Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -31,6 +31,7 @@
 %\usepackage{algpseudocode}
 \usepackage{enumitem}
 \usepackage{mathtools}
+\usepackage{steinmetz}
 \usepackage{tikz}
 \usepackage{circuitikz}
 \usepackage{verbatim}
@@ -289,9 +290,6 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \end{lstlisting}
 
 
-\section{PID Controller}
-\subsection{Introduction}
-\input{./chapters/ee18btech11021.tex}
 \section{Polar Plot}
 \subsection{Introduction}
 \input{./chapters/ee18btech11028.tex}
@@ -307,6 +305,14 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11042.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11029.tex}
+%
+\section{Bode Plot}
+\subsection{Gain and Phase Margin}
+\input{./chapters/ee18btech11049.tex}
+%
+\section{PID Controller}
+\subsection{Introduction}
+\input{./chapters/ee18btech11021.tex}
 
 %\input{./chapters/ee18btech11029.tex}
 
