--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -383,6 +383,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11046.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11050.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11052.tex}
 %
 \section{Polar Plot}
 \subsection{Introduction}
