--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -310,10 +310,12 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11012.tex}
 \subsection{Peak Overshoot}
 \input{./chapters/ee18btech11045.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11002.tex}
 \subsection{Settling Time}
 \input{./chapters/ee18btech11035.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11002.tex}
+\subsection{Example}
+\input{./chapters/es17btech11015.tex}
 %
 \section{Routh Hurwitz Criterion}
 \subsection{Routh Array}
@@ -348,11 +350,13 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11007.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11034.tex}
-
+%
 \section{Compensators}
 \subsection{Phase Lead}
 \label{sec:ee18btech11021}
 \input{./chapters/ee18btech11021.tex}
+\subsection{Lead Circuit}
+\input{./chapters/ee17btech11013.tex}
 \subsection{Lag Lead}
 %\label{sec:ee18btech11044}
 %\input{./chapters/ee18btech11010.tex}
