Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -393,6 +393,9 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Polar Plot}
 \subsection{Introduction}
 \input{./chapters/ee18btech11051.tex}
+\section{PID Controller}
+\subsection{Introduction}
+\input{./chapters/ee17btech11031.tex}
 
 
 \end{document}
