Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -309,6 +309,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \section{Bode Plot}
 \subsection{Gain and Phase Margin}
 \input{./chapters/ee18btech11049.tex}
+\subsection{Example}
+\input{./chapters/ee18btech11048.tex}
 %
 \section{PID Controller}
 \subsection{Introduction}
