Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -311,6 +311,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11049.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11048.tex}
+\subsection{Example}
+\input{./chapters/es17btech11002.tex}
 %
 \section{PID Controller}
 \subsection{Introduction}
