Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -305,6 +305,9 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11009.tex}
 \subsection{Phase}
 \input{./chapters/ee18btech11037.tex}
+\subsection{Example}
+\input{./chapters/ep18btech11016.tex}
+%
 \section{Second order System}
 \subsection{Damping}
 \input{./chapters/ee18btech11012.tex}
