Add existing files

--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -353,6 +353,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \input{./chapters/ee18btech11007.tex}
 \subsection{Example}
 \input{./chapters/ee18btech11034.tex}
+\subsection{Example}
+\input{./chapters/es17btech11009.tex}
 %
 \section{Compensators}
 \subsection{Phase Lead}
