Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -295,11 +295,31 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \end{lstlisting}
 
 
-\section{}
+\section{Frequency Response Analysis}
+\subsection{Polar Plot}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\input{./chapters/ee18btech11012.tex}
+\input{./chapters/ee18btech11028.tex}
+\input{./chapters/ee18btech11023.tex}
+\input{./chapters/ee18btech11029_1.tex}
+\input{./chapters/ee18btech11033.tex}
+\input{./chapters/ee18btech11042.tex}
+\end{enumerate}
 %
-\section{}
-\subsection{}
-\subsection{}
+\subsection{Direct and Inverse Polar Plot}
+\numberwithin{equation}{subsection}
+\input{./chapters/ee18btech11002.tex}
+
+\subsection{Bode Plot}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\input{./chapters/ee18btech11048.tex}
+\input{./chapters/ee18btech11049.tex}
+\input{./chapters/es17btech11002.tex}
+\end{enumerate}
+
+\section{Stability in Frequency Domain}
+
+\subsection{Nyquist Criterion}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
 \input{./chapters/ee18btech11028_1.tex}
@@ -309,86 +329,20 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{}
 \subsection{}
 \subsection{}
+\numberwithin{equation}{subsection}
+\input{./chapters/ee18btech11029.tex}
 \subsection{}
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11034.tex}
 
-\section{Polar Plot}
-\subsection{Introduction}
-\input{./chapters/ee18btech11028.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11023.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11012.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11033.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11002.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11042.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11029.tex}
 %
-\section{Bode Plot}
-\subsection{Gain and Phase Margin}
-\input{./chapters/ee18btech11049.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11048.tex}
-\subsection{Example}
-\input{./chapters/es17btech11002.tex}
 %
-\section{PID Controller}
+\section{Design in Frequency Domain}
+\section{PID Controller Design}
 \subsection{Introduction}
 \input{./chapters/ee18btech11021.tex}
 
-%\input{./chapters/ee18btech11029.tex}
-
-%\section{Signal Flow Graph}
-%\subsection{Mason's Gain Formula}
-%\input{./chapters/ee18btech11003.tex}
-%\subsection{Matrix Formula}
-%\input{./chapters/ee18btech11007_1.tex}
-%\section{Bode Plot}
-%\subsection{Introduction}
-%\input{./chapters/ee18btech11001.tex}
-%\subsection{Example}
-%\input{./chapters/ee18btech11009.tex}
-%\section{Second order System}
-%\subsection{Damping}
-%\input{./chapters/ee18btech11012.tex}
-%\subsection{Example}
-%\input{./chapters/ee18btech11002.tex}
-%\section{Routh Hurwitz Criterion}
-%\subsection{Routh Array}
-%\input{./chapters/ee18btech11014.tex}
-%\subsection{Marginal Stability}
-%\input{./chapters/ee18btech11005.tex}
-%\subsection{Stability}
-%\input{./chapters/ee18btech11008.tex}
-%\subsection{Example}
-%\input{./chapters/ee18btech11020.tex}
-%\section{State-Space Model}
-%\subsection{Controllability and Observability}
-%%\input{./chapters/ee18btech11004.tex}
-%\input{./chapters/ee18btech11006.tex}
 %
-%\subsection{Second Order System}
-%\input{./chapters/ee18btech11011.tex}
-%\subsection{Example}
-%\input{./chapters/ee18btech11023.tex}
-%
-%\input{./chapters/ee18btech11007.tex}
-%
-\section{Compensators}
-%\subsection{Phase Lead}
-%%\input{./chapters/ee18btech11010.tex}
-%\input{./chapters/ee18btech11021.tex}
-%\section{Gain Margin}
-%\input{./chapters/ee18btech11016.tex}
-%\section{Phase Margin}
-%\input{./chapters/ee18btech11017.tex}
-%\section{Oscillator}
-%\input{./chapters/ee18btech11019.tex}
 %
 
 
