Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -329,15 +329,35 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{}
 \subsection{}
 \subsection{}
+\subsection{Nyquist and Routh-Hurwitz}
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11029.tex}
-\subsection{}
+\subsection{Nyquist}
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11034.tex}
+\subsection{Nyquist}
+\numberwithin{equation}{subsection}
+\input{./chapters/ee18btech11035.tex}
 
 %
 %
 \section{Design in Frequency Domain}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{Nyquist Criterion}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11036.tex}
+\end{enumerate}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+\subsection{}
+
 \section{PID Controller Design}
 \subsection{Introduction}
 \input{./chapters/ee18btech11021.tex}
