Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -315,6 +315,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11048.tex}
 \input{./chapters/ee18btech11049.tex}
 \input{./chapters/es17btech11002.tex}
+\input{./chapters/ee18btech11045.tex}
 \end{enumerate}
 
 \section{Stability in Frequency Domain}
@@ -345,15 +346,18 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{}
 \subsection{}
 \subsection{}
-\subsection{}
-\subsection{Nyquist Criterion}
+\subsection{Lead Compensator}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
 \input{./chapters/ee18btech11036.tex}
 \end{enumerate}
 \subsection{}
 \subsection{}
-\subsection{}
+\subsection{Lead Compensator}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\numberwithin{equation}{enumi}
+\input{./chapters/es17btech11002_new.tex}
+\end{enumerate}
 \subsection{}
 \subsection{}
 \subsection{}
