Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -324,6 +324,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
 \input{./chapters/ee18btech11028_1.tex}
+\input{./chapters/ee18btech11041.tex}
 \input{./chapters/ee18btech11016.tex}
 \end{enumerate}
 \subsection{}
