Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -330,7 +330,6 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{}
 \subsection{}
 \subsection{}
-\subsection{}
 \subsection{Nyquist and Routh-Hurwitz}
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11029.tex}
@@ -346,7 +345,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \section{Design in Frequency Domain}
 \subsection{}
 \subsection{}
-\subsection{}
+\subsection{Lag Compensator}
+\input{./chapters/ee18btech11030.tex}
 \subsection{Lead Compensator}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
