Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -328,7 +328,11 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11016.tex}
 \end{enumerate}
 \subsection{}
-\subsection{}
+\subsection{Nyquist Criterion}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\numberwithin{equation}{enumi}
+\input{./chapters/es17btech11015.tex}
+\end{enumerate}
 \subsection{}
 \subsection{Nyquist and Routh-Hurwitz}
 \numberwithin{equation}{subsection}
